--- a/.github/workflows/new_build.yml
+++ b/.github/workflows/new_build.yml
@@ -12,26 +12,18 @@ jobs:
     name: Build and analyze
     runs-on: ubuntu-latest
 
-    # All `run:` commands will be executed inside your Maven project folder
-    defaults:
-      run:
-        working-directory: ./library-management-system
-
     steps:
-      # Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # better relevancy for Sonar analysis
 
-      # Install JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: 'zulu'
 
-      # Cache SonarQube packages
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
@@ -39,7 +31,6 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
-      # Cache Maven dependencies
       - name: Cache Maven packages
         uses: actions/cache@v4
         with:
@@ -47,12 +38,21 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      # Build project and run SonarCloud analysis
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}     # provided automatically by GitHub
-          SONAR_TOKEN:  ${{ secrets.SONAR_TOKEN }}      # you already created this
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-          -Dsonar.projectKey=S-E-Course_Library-Management-System \
-          -Dsonar.organization=s-e-course \
-          -Dsonar.host.url=https://sonarcloud.io
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   # built-in
+          SONAR_TOKEN:  ${{ secrets.SONAR_TOKEN }}    # you created this
+        run: |
+          echo "Current directory:"
+          pwd
+          echo "Listing:"
+          ls
+          echo "---- cd into Maven project ----"
+          cd library-management-system
+          echo "Now here:"
+          pwd
+          ls
+          mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.projectKey=S-E-Course_Library-Management-System \
+            -Dsonar.organization=s-e-course \
+            -Dsonar.host.url=https://sonarcloud.io
