--- a/pom.xml
+++ b/pom.xml
@@ -1,85 +1,80 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.library.management</groupId>
   <artifactId>library-management-system</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Library Management System</name>
-  
+
   <dependencies>
-  
-	<dependency>
-        <groupId>org.hamcrest</groupId>
-        <artifactId>hamcrest</artifactId>
-        <version>2.2</version>
-        <scope>test</scope>
-    </dependency>
-    
     <dependency>
-	    <groupId>org.postgresql</groupId>
-	    <artifactId>postgresql</artifactId>
-	    <version>42.6.0</version>
-	</dependency>
-	
-	<dependency>
-	    <groupId>org.mockito</groupId>
-	    <artifactId>mockito-core</artifactId>
-	    <version>3.12.4</version>
-	    <scope>test</scope>
-	</dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest</artifactId>
+      <version>2.2</version>
+      <scope>test</scope>
+    </dependency>
 
-	<dependency>
-		<groupId>com.sun.mail</groupId>
-		<artifactId>jakarta.mail</artifactId>
-		<version>2.0.1</version>
-	</dependency>
-	
-	<dependency>
-  <groupId>io.github.cdimascio</groupId>
-  <artifactId>dotenv-java</artifactId>
-  <version>2.2.4</version>
-</dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.6.0</version>
+    </dependency>
 
-<dependency>
-  <groupId>org.junit.jupiter</groupId>
-  <artifactId>junit-jupiter</artifactId>
-  <version>5.10.2</version>
-  <scope>test</scope>
-</dependency>
-	
-	  
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.12.4</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>jakarta.mail</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>2.2.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.10.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
   <properties>
+    <sonar.organization>s-e-course</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  </properties>
 
-  	<sonar.organization>s-e-course</sonar.organization>
-	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-	
-	</properties>
-  
-  
-<plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-
-    <executions>
-
-        <!-- Prepares the property pointing to the JaCoCo runtime agent
-             which is passed as VM argument when Maven Surefire plugin is executed. -->
-        <execution>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.11</version>
+        <executions>
+          <execution>
             <goals>
-                <goal>prepare-agent</goal>
+              <goal>prepare-agent</goal>
             </goals>
-        </execution>
-
-        <!-- Ensures that the code coverage report is created after all tests have been run. -->
-        <execution>
+          </execution>
+          <execution>
             <id>generate-report</id>
             <phase>verify</phase>
             <goals>
-                <goal>report</goal>
+              <goal>report</goal>
             </goals>
-        </execution>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
-    </executions>
-</plugin>
-  
 </project>
